DSA: format samples

--- a/src/sem-3/UE23CS252A/u1.ipynb
+++ b/src/sem-3/UE23CS252A/u1.ipynb
@@ -67,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -183,6 +175,334 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice;\n",
+      "1.Insertion at the beginning\n",
+      "2.Insertion at the Position\n",
+      "3.Insertion at the End\n",
+      "4.Deletion at the beginning\n",
+      "5.Deletion at the Position\n",
+      "6.Deletion at the End\n",
+      "7.Search for the data\n",
+      "Enter the data to be inserted:\n",
+      "12Press 1 to continue and 0 to Exit\n",
+      "Enter your choice;\n",
+      "1.Insertion at the beginning\n",
+      "2.Insertion at the Position\n",
+      "3.Insertion at the End\n",
+      "4.Deletion at the beginning\n",
+      "5.Deletion at the Position\n",
+      "6.Deletion at the End\n",
+      "7.Search for the data\n",
+      "Enter the data to be searched:\n",
+      "The data is found at position 1\n",
+      "Press 1 to continue and 0 to Exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "#include <stdio.h>\n",
+    "#include <stdlib.h>\n",
+    "\n",
+    "typedef struct node\n",
+    "{\n",
+    "    int data;\n",
+    "    struct node *next;\n",
+    "} Node;\n",
+    "\n",
+    "Node *createNode(int data);\n",
+    "Node *insert_start(Node *head, int data);\n",
+    "Node *insert_pos(Node *head, int data, int pos);\n",
+    "Node *insert_End(Node *head, int data);\n",
+    "void display(Node *head);\n",
+    "Node *delete_start(Node *head);\n",
+    "Node *delete_pos(Node *head, int pos);\n",
+    "Node *delete_End(Node *head);\n",
+    "int search(Node *head, int data);\n",
+    "\n",
+    "Node *createNode(int data)\n",
+    "{\n",
+    "    Node *newnode;\n",
+    "    newnode = (Node *)malloc(sizeof(Node));\n",
+    "    newnode->data = data;\n",
+    "    newnode->next = NULL;\n",
+    "    return newnode;\n",
+    "}\n",
+    "Node *insert_start(Node *head, int data)\n",
+    "{\n",
+    "    Node *temp, *last = head; // 2. change\n",
+    "    if (head == NULL)\n",
+    "    {\n",
+    "        head = createNode(data);\n",
+    "        head->next = head; // 1.Change\n",
+    "    }\n",
+    "    else // Inserting at the start\n",
+    "    {\n",
+    "        temp = createNode(data);\n",
+    "        temp->next = head;\n",
+    "        // 3.change\n",
+    "        while (last->next != head) // To move last pointer to the end\n",
+    "            last = last->next;\n",
+    "        last->next = temp; //\n",
+    "        head = temp;\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "Node *insert_pos(Node *head, int data, int pos)\n",
+    "{\n",
+    "    Node *temp = head, *temp1, *newnode;\n",
+    "    newnode = createNode(data);\n",
+    "    if (head == NULL) // Empty Node Condition\n",
+    "    {\n",
+    "        head = newnode;\n",
+    "        head->next = head; // 1.Change\n",
+    "    }\n",
+    "    else if (head->next == head) // 4.Change- One Element Condition\n",
+    "    {\n",
+    "        if (pos > 1)\n",
+    "        {\n",
+    "            newnode->next = head; // 5.change\n",
+    "            head->next = newnode;\n",
+    "        }\n",
+    "        else\n",
+    "            head = insert_start(head, data);\n",
+    "    }\n",
+    "    else\n",
+    "    {\n",
+    "        if (pos == 1)\n",
+    "            head = insert_start(head, data);\n",
+    "        else\n",
+    "        {\n",
+    "            for (int i = 1; i < pos - 1; i++) // traversing to pos\n",
+    "            {\n",
+    "                if (temp->next != head) // 6.Change - End Pos\n",
+    "                    temp = temp->next;\n",
+    "            }\n",
+    "            if (temp->next == head) // 7.change - last node\n",
+    "            {\n",
+    "                temp->next = newnode;\n",
+    "                newnode->next = head;\n",
+    "            }\n",
+    "            else\n",
+    "            { // Insert at Position\n",
+    "                temp1 = temp->next;\n",
+    "                newnode->next = temp1;\n",
+    "                temp->next = newnode;\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "Node *insert_End(Node *head, int data)\n",
+    "{\n",
+    "    Node *temp = head;\n",
+    "    Node *newnode = createNode(data);\n",
+    "    if (head == NULL)\n",
+    "    {\n",
+    "        head = newnode;\n",
+    "        head->next = head; // 1.Change\n",
+    "    }\n",
+    "    else\n",
+    "    {\n",
+    "        while (temp->next != head) // 8.Change\n",
+    "            temp = temp->next;\n",
+    "        temp->next = newnode;\n",
+    "        newnode->next = head; // 9.Change\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "void display(Node *head)\n",
+    "{\n",
+    "    Node *temp = head;\n",
+    "    if (head == NULL)\n",
+    "        printf(\"\\nThe List is empty\");\n",
+    "    else\n",
+    "    {\n",
+    "        while (temp->next != head)\n",
+    "        {\n",
+    "            printf(\"%d->\", temp->data);\n",
+    "            temp = temp->next; // Important otherwise infinite loop\n",
+    "        }\n",
+    "        printf(\"%d\", temp->data);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "    Node *head = NULL;\n",
+    "    int cont, ch, data, pos;\n",
+    "    do\n",
+    "    {\n",
+    "        printf(\"Enter your choice;\\n\");\n",
+    "        printf(\"1.Insertion at the beginning\\n\");\n",
+    "        printf(\"2.Insertion at the Position\\n\");\n",
+    "        printf(\"3.Insertion at the End\\n\");\n",
+    "        printf(\"4.Deletion at the beginning\\n\");\n",
+    "        printf(\"5.Deletion at the Position\\n\");\n",
+    "        printf(\"6.Deletion at the End\\n\");\n",
+    "        printf(\"7.Search for the data\\n\");\n",
+    "        scanf(\"%d\", &ch);\n",
+    "        switch (ch)\n",
+    "        {\n",
+    "        case 1:\n",
+    "            printf(\"Enter the data to be inserted:\\n\");\n",
+    "            scanf(\"%d\", &data);\n",
+    "            head = insert_start(head, data);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 2:\n",
+    "            printf(\"Enter the data to be inserted:\\n\");\n",
+    "            scanf(\"%d\", &data);\n",
+    "            printf(\"Enter the position to be inserted:\\n\");\n",
+    "            scanf(\"%d\", &pos);\n",
+    "            head = insert_pos(head, data, pos);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 3:\n",
+    "            printf(\"Enter the data to be inserted:\\n\");\n",
+    "            scanf(\"%d\", &data);\n",
+    "            head = insert_End(head, data);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 4:\n",
+    "            head = delete_start(head);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 5:\n",
+    "            printf(\"Enter the position to be deleted:\\n\");\n",
+    "            scanf(\"%d\", &pos);\n",
+    "            head = delete_pos(head, pos);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 6:\n",
+    "            head = delete_End(head);\n",
+    "            display(head);\n",
+    "            break;\n",
+    "        case 7:\n",
+    "            printf(\"Enter the data to be searched:\\n\");\n",
+    "            scanf(\"%d\", &data);\n",
+    "            pos = search(head, data);\n",
+    "            if (pos > 0)\n",
+    "                printf(\"The data is found at position %d\\n\", pos);\n",
+    "            else\n",
+    "                printf(\"The data is not found\\n\");\n",
+    "            break;\n",
+    "        default:\n",
+    "            printf(\"Wrong Choice\\n\");\n",
+    "        }\n",
+    "        printf(\"Press 1 to continue and 0 to Exit\\n\");\n",
+    "        scanf(\"%d\", &cont);\n",
+    "    } while (cont);\n",
+    "    return 0;\n",
+    "}\n",
+    "\n",
+    "Node *delete_start(Node *head)\n",
+    "{\n",
+    "    Node *temp = head, *last = head;\n",
+    "    if (head == NULL)\n",
+    "    {\n",
+    "        printf(\"The List is Empty\\n\");\n",
+    "    }\n",
+    "    else\n",
+    "    {\n",
+    "        while (last->next != head) // Change 10-last pointing to last node\n",
+    "            last = last->next;\n",
+    "        head = head->next;\n",
+    "        last->next = head; // Change 11.Last node-> next to new head\n",
+    "        temp->next = NULL;\n",
+    "        free(temp);\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "Node *delete_pos(Node *head, int pos)\n",
+    "{\n",
+    "    Node *temp1 = head, *temp2;\n",
+    "    if (head == NULL)\n",
+    "    {\n",
+    "        printf(\"\\nThe List is Empty\");\n",
+    "    }\n",
+    "    else if (head->next == head) // Change\n",
+    "    {\n",
+    "        head = NULL;\n",
+    "        free(temp1);\n",
+    "    }\n",
+    "    else\n",
+    "    {\n",
+    "        for (int i = 1; i < pos - 1; i++)\n",
+    "        {\n",
+    "            if (temp1->next != head) // change\n",
+    "                temp1 = temp1->next;\n",
+    "        }\n",
+    "        if (temp1->next == head)\n",
+    "        { // Change\n",
+    "            head = delete_End(head);\n",
+    "        }\n",
+    "        temp2 = temp1->next;\n",
+    "        // code to delete\n",
+    "        temp1->next = temp2->next;\n",
+    "        temp2->next = NULL;\n",
+    "        free(temp2);\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "Node *delete_End(Node *head)\n",
+    "{\n",
+    "    Node *t1 = head, *t2;\n",
+    "    if (head == NULL)\n",
+    "        printf(\"List is Empty\\n\");\n",
+    "    else if (head->next == head) // change\n",
+    "    {\n",
+    "        head = NULL;\n",
+    "        free(t1);\n",
+    "    }\n",
+    "    else\n",
+    "    {\n",
+    "        while (t1->next->next != head) // change\n",
+    "        {\n",
+    "            t1 = t1->next;\n",
+    "        }\n",
+    "        t2 = t1->next;   // free(t1->next)\n",
+    "        t1->next = head; // Change\n",
+    "        free(t2);\n",
+    "    }\n",
+    "    return head;\n",
+    "}\n",
+    "\n",
+    "int search(Node *head, int data)\n",
+    "{\n",
+    "    int pos = 0;\n",
+    "    Node *temp = head;\n",
+    "    if (head == NULL)\n",
+    "    {\n",
+    "        printf(\"The List is Empty\\n\");\n",
+    "        return 0;\n",
+    "    }\n",
+    "    do\n",
+    "    {\n",
+    "        pos++;\n",
+    "        if (temp->data == data)\n",
+    "        {\n",
+    "            return pos;\n",
+    "        }\n",
+    "        temp = temp->next;\n",
+    "    } while (temp != head); // change\n",
+    "    return 0;\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,20 +511,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/tmpodubb6l_.c: In function ‘main’:\n",
-      "/tmp/tmpodubb6l_.c:38:15: warning: unused variable ‘skipList’ [-Wunused-variable]\n",
-      "   38 |     SKIPLIST *skipList = createSkipList();\n",
-      "      |               ^~~~~~~~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -260,19 +569,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "20\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -338,17 +637,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Circular Linked List: 10 20 30 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -437,17 +728,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Doubly linked list: 30 20 10 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
@@ -513,21 +796,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sparse Matrix:\n",
-      "0 5 0 0 0 \n",
-      "0 0 0 8 0 \n",
-      "0 0 6 0 0 \n",
-      "0 0 0 0 9 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#include <stdio.h>\n",
     "#include <stdlib.h>\n",
